[package]
name = "zssk-completions-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
ureq = { version = "2.5.0", features = ["json"] }
serde_json = "1.0.64"